manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-game-theory-svc
  labels:
    app: website-game-theory
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: website-game-theory
